stage 6.1 - finnish